# FEH_Unit_Comparisons

./: Cargo.toml  README.md
output/: gamepress_feh_stats.csv
output/metrics/finn/: finn_cosine_nearest  finn_euclidean_nearest  finn_manhattan_nearest  finn_minkowski_nearest
output/metrics/fiora/: fiora_cosine_farthest  fiora_euclidean_nearest  fiora_manhattan_farthest  fiora_minkowski_nearest
output/metrics/hector/: hector_cosine_farthest.csv  hector_cosine_nearest  hector_cosine_nearest.csv  hector_euclidean_farthest.csv  hector_euclidean_nearest  hector_euclidean_nearest.csv  hector_manhattan_farthest.csv  hector_manhattan_nearest  hector_manhattan_nearest.csv  hector_minkowski_farthest  hector_minkowski_farthest.csv  hector_minkowski_nearest.csv
output/metrics/tiki_(adult)/: tiki_(adult)_cosine_farthest  tiki_(adult)_cosine_farthest.csv  tiki_(adult)_cosine_nearest.csv  tiki_(adult)_euclidean_farthest  tiki_(adult)_euclidean_nearest.csv  tiki_(adult)_manhattan_farthest.csv  tiki_(adult)_manhattan_nearest  tiki_(adult)_manhattan_nearest.csv  tiki_(adult)_minkowski_farthest  tiki_(adult)_minkowski_farthest.csv  tiki_(adult)_minkowski_nearest.csv
src/: feh_json.rs  learning_ml.rs  main.rs  stats_problems.rs  stats_structs.rs
src/stats_structs/: vec_f.rs
src/utils/: feh_structs.rs  mod.rs
src/utils/stats_structs/: vec_f.rs
