[package]
name = "relearning_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }